# readysetboole

./: README.md  dune-project  readysetboole.opam
lib/: adder.ml  ast.ml  astutils.ml  cnf.ml  dune  gray.ml  mult.ml  nnf.ml  powerset.ml  sat.ml  truthtable.ml
test/: dune
tests/: dune
