(lang dune 3.15)

(name readysetboole)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "shaolin-peanut")

(maintainers "shaolin-peanut")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name readysetboole)
 (synopsis "An introduction to boolean algebra")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
